--- a/SmsForward/app/build.gradle
+++ b/SmsForward/app/build.gradle
@@ -2,13 +2,17 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
-        applicationId "ru.iddqd"
-        minSdkVersion 16
-        targetSdkVersion 23
+        applicationId "ru.iddqd.sevens"
+        minSdkVersion 26
+        targetSdkVersion 26
+
+        versionCode 1
+        versionName "1.0.0"
+
     }
 
     buildTypes {
@@ -23,9 +27,7 @@ android {
 }
 
 dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-//    compile 'com.android.support:support-v4:20.0.0'
-}
-repositories {
-    mavenCentral()
 }
