--- a/SmsForward/app/src/main/AndroidManifest.xml
+++ b/SmsForward/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.iddqd"
-    android:versionCode="3"
-    android:versionName="666" >
+    package="ru.iddqd">
 
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS"/>
