--- a/SmsForward/app/src/main/AndroidManifest.xml
+++ b/SmsForward/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="ru.iddqd">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS"/>
 
@@ -12,14 +15,13 @@
     <uses-permission android:name="android.permission.INTERNET" >
     </uses-permission>
 
-    <uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        >
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name="ru.iddqd.MainActivity"
             android:label="RU.IDDQD" >
@@ -38,22 +40,6 @@
                 </action>
             </intent-filter>
         </receiver>
-
-        <receiver android:name=".AlarmReceiver" >
-        </receiver>
-
-        <receiver
-            android:name=".BootCompleteBroadcastReceiver"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </receiver>
-
-        <service android:name=".BatteryMonitorService" />
 
 
 
